# stock-forecaster

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  test_all_models.py  test_api.py  test_auth_api.py  test_db.py
.github/workflows/: auto-merge.yml  ci.yml
config/: logging_config.py  settings.py
scripts/: start.sh
src/api/: app.py  dependencies.py  schemas.py
src/api/routes/: auth.py  backtests.py  coach.py  forecasts.py  models.py  portfolio.py  settings.py  signals.py  stocks.py  watchlists.py
src/auth/: audit.py  encryption.py  revocation.py  schemas.py  security.py  ticker_validator.py
src/backtesting/: engine.py  metrics.py  report.py
src/coach/: coach.py  llm_client.py  prompts.py
src/dashboard/: app.py
src/dashboard/components/: auth_helper.py  charts.py  fintech_ui.py  metrics_cards.py  sidebar.py  theme.py  ui_helpers.py
src/dashboard/pages/: 0_Login.py  (+10 more)
src/data_layer/: base_provider.py  cache.py  provider_factory.py  yfinance_provider.py
src/database/: connection.py  repositories.py
src/features/: calendar_features.py  pipeline.py  sentiment.py  technical.py
src/learning/: modules.py
src/models/: arima_model.py  base_model.py  ensemble.py  lstm_model.py  model_registry.py  prophet_model.py  transformer_model.py  xgboost_model.py
src/signals/: briefing.py  engine.py  notifications.py  rules.py
tests/: conftest.py  test_api.py  test_auth.py  test_learning.py  test_notifications.py  test_repositories.py  test_schemas.py  test_signals.py
