[project]
name = "stock-forecaster"
version = "2.0.0"
description = "Portfolio Growth Coach — ML forecasting with signals, coaching, and portfolio tracking"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.40",
    "pandas>=2.0",
    "plotly>=5.20",
    "yfinance>=0.2.40",
    "ta>=0.11",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "statsmodels>=0.14",
    "pmdarima>=2.0",
    "transformers>=4.40",
    "feedparser>=6.0",
    "tenacity>=8.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
    "torch>=2.0",
    "python-jose[cryptography]>=3.3",
    "cryptography>=42.0",
    "slowapi>=0.1.9",
    "streamlit-shadcn-ui>=0.1.19",
    "streamlit-lightweight-charts>=0.7.17",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402"]
